Tambah fungsi PWA

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "chart.js": "^4.4.5",
     "next": "15.0.1",
-    "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "workbox-precaching": "^7.1.0",
+    "workbox-routing": "^7.1.0",
+    "workbox-strategies": "^7.1.0"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
